[package]
name = "test-mingw"
version = "0.1.0"
authors = ["camille viot <camille.viot@altran.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kas = { git="https://github.com/kas-gui/kas.git" }
kas-wgpu = { git="https://github.com/kas-gui/kas.git" }
kas-theme = { git="https://github.com/kas-gui/kas.git" }
wgpu = "0.6.0"
bytemuck = "1.2"
cgmath = "0.17.0"
rand = "0.7.3"

nalgebra = { version = "0.22.0", default-features = false }
slotmap = { version = "0.4.0", features = ["serde"] }
bitarray = { version = "0.2.6", features = ["space", "serde"] }

cv = { features = ["default"], git="https://github.com/codec-abc/cv.git" }
cv-reconstruction = { features = ["serde-serialize"], git="https://github.com/codec-abc/cv.git" } 
hnsw = { version ="0.6.1", features=["serde1"] }

image = "0.23.9"
rand_pcg = "0.2.1"
log = "0.4.11"
pretty_env_logger = "0.4.0"
bincode = "1.3.1"
serde_json = "1.0.58"
num-traits = { version = "0.2.12", default-features = false }
serde = { version = "1.0.116", default-features = false, features = ["derive"], optional = true }